--- a/EX-01A/Resume.html
+++ b/EX-01A/Resume.html
@@ -4,9 +4,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <img class="im" align="right"src="img.jpg">
         <h2 align="center">RESUME</h2>
         <h3><b>Mohamed Nawfal salam</b></h3>
-         <h4><p>  57/1,papanasam road,valangaiman,thiruvarur dist,<br>
+         <h4><p>  57/1,papanasam road,valangiman,thiruvarur dist,<br>
            Tamilnadu-612804</p></h4>
         <p><b>Email:</b>220701168@rajalakshmi.edu.in<br>
         <b>Contact No:</b>7305727998</p>
