--- a/EX-01B/Timetable.html
+++ b/EX-01B/Timetable.html
@@ -25,8 +25,7 @@
             </tr>
             <tr>
                 <td>Tuesday</td>
-                <td class="num">VAP</td>
-                <td>VAP</td>
+                <td style="border-right: none;text-align: center;" colspan="2">VAP</td>
                 <td>BREAK</td>
                 <td>AI19341-POAI<br><P>A 310</P></td>
                 <td>CS19542-IP<BR><P>A 310</P></td>
